--- a/JS/City_Score_Tracker.html
+++ b/JS/City_Score_Tracker.html
@@ -50,14 +50,16 @@
 
   <div id="map"></div>
 
-  <div id="text"> Average Cost Score </div>
+  <div id="text"> Cost of Living Score </div>
 
   
   <canvas id="barChart" class="chart"></canvas>
 
-  <div id="text"> Average Safty Score </div>
+  <div id="text"> Safty Score </div>
 
   <canvas id="barChart2" class="chart"></canvas>
+
+  <canvas id="scatterChart"></canvas>
 
   
 
